[tool.poetry]
name = "stable-diffusion"
version = "0.1.0"
description = ""
authors = ["Jamie Brandon <jamie.brandon@dictionary.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
diffusers = "^0.27.2"
torch = "^2.2.2"
transformers = "^4.40.0"
accelerate = "^0.29.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
